# colors

./: Cargo.toml  README.md
data/: colors.csv  colors.json  colors.xml
src/: main.rs
